<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="password">Enter Password</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preferences_file_name">Avengers Preferences</string>
</resources>